--- a/archive/templates/home.html
+++ b/archive/templates/home.html
@@ -15,7 +15,90 @@
           Add new game
         </a>
       </div>
+      <div class="d-flex container mt-5 mx-auto row">
+          <div class="col-xl-6 col-md-12 d-flex flex-column">
+              <div>
+                <h2 class="text-center">Your friends</h2>
+                {% if user.profile.friends.exists %}
+                <div class="overflow-scroll container" style="height: 250px">
+                    <table class="table align-middle">
+                      <tbody>
+                        {% for friend in user.profile.friends.all %}
+                          <tr>
+                            <td class="text-center">{{ friend.user.username }}</td>
+                          </tr>
+                        {% endfor %}
+                      </tbody>
+                    </table>
+                </div>
 
+                {% else %}
+                <p class="text-center border-bottom">You don't have any friends</p>
+                {% endif %}
+              </div>
+
+              <div>
+                <h2 class="text-center mt-5">Your invitations</h2>
+                {% if user.profile.invitations_received.exists %}
+                <div class="overflow-scroll container" style="height: 250px">
+                    <table class="table align-middle">
+                      <tbody>
+                        {% for invitation in user.profile.invitations_received.all %}
+                          <tr>
+                              <td class="text-center" style="width:50%">{{ invitation.user.username }}</td>
+                              <td class="text-center">
+                                  <a class="btn btn-success" role="button" href="{% url 'accept' invitation.user %}">Accept</a>
+                                  <a class="btn btn-danger"  role="button" href="{% url 'reject' invitation.user %}">Reject</a>
+                              </td>
+                          </tr>
+                        {% endfor %}
+                      </tbody>
+                    </table>
+                </div>
+
+                {% else %}
+                <p  class="text-center border-bottom mb-5">You don't have any invitations</p>
+                {% endif %}
+              </div>
+          </div>
+
+          <div class="col-xl-6 col-md-12">
+               <h2 class="text-center mt-5">Add new friend</h2>
+                {% if all_users|length > 1 %}
+                <form method="get" action="{% url 'home' %}" class="row d-flex justify-content-center">
+                  {% csrf_token %}
+                  <div class="form-group col-xl-4 col-md-6 d-flex flex-column">
+                    <label class="form-label">Search by username:</label>
+                    <input id="username" name="username" class="form-control">
+                  </div>
+                  <button type="submit" class="btn btn-primary mt-auto col-xl-2 col-md-6" style="height: 40px">Search</button>
+                </form>
+                <div class="overflow-scroll container" style="height: 500px">
+                    <table class="table justify-content-center mt-5 mx-auto">
+                      <tbody>
+                        {% for u in object_list %}
+                        {% if user.username != u.user.username %}
+                        {% if not u.friends.exists or user.profile not in u.friends.all %}
+                        {% if not user.profile.invitations.exists or u not in user.profile.invitations.all %}
+                          <tr>
+                              <td class="text-center" style="width: 50%">{{ u.user.username }}</td>
+                              <td class="text-center">
+                                  <a class="btn btn-success" role="button" href="{% url 'send-invitation' u.user.username %}">Send invitation</a>
+                              </td>
+                          </tr>
+                        {% endif %}
+                        {% endif %}
+                        {% endif %}
+                        {% endfor %}
+                      </tbody>
+                    </table>
+                </div>
+
+                {% else %}
+                <p class="text-center border-bottom">You are the first user of our application</p>
+                {% endif %}
+          </div>
+      </div>
     </div>
 
 {% else %}
